--- a/MTHSFBLA/public_html/Announcements.html
+++ b/MTHSFBLA/public_html/Announcements.html
@@ -87,7 +87,7 @@ and open the template in the editor.
                 <hr>
           <footer class="footer"  style = "background-color: #f5f5f5; line-height: 60px">
                 <div class = "container">
-                    <span class="text-muted">Montville Township FBLA Webmaster ©2018</span>
+                    <span class="text-muted">Montville Township FBLA Webmaster ©2019-20</span>
                 </div>
           </footer>
     </body>
