--- a/MTHSFBLA/public_html/Resources.html
+++ b/MTHSFBLA/public_html/Resources.html
@@ -131,7 +131,7 @@ and open the template in the editor.
             
            <footer class="footer"  style = "background-color: #f5f5f5; line-height: 60px">
                 <div class = "container">
-                    <span class="text-muted">Montville Township FBLA Webmaster ©2018</span>
+                    <span class="text-muted">Montville Township FBLA Webmaster ©2019-20</span>
                 </div>
           </footer>
 
